# gunpowder

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  mypy.ini  neuroglancer_fun.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: black.yaml  close-inactive-prs.yaml  mypy.yaml  publish-docs.yaml  publish.yaml  pytest.yaml  ruff.yaml  test.yml  ty.yaml
docker/: Dockerfile  Makefile  README.md  test_environment.py
docker/caffe/: Dockerfile
docker/caffe/gunpowder/: Dockerfile  test_environment.py
docker/grisaitis_mod/: Dockerfile
docs/: .gitignore  api.html  arrays.html  batches.html  custom_providers.html  example_boundaries.html  first_steps.html  genindex.html  index.html  install.html  nodes.html  objects.inv  overview.html  pipeline.html  points.html  py-modindex.html  requests_batches.html  search.html  searchindex.js  tutorial.html  tutorial_batch_provider.html  tutorial_simple_pipeline.html  volumes.html
docs/_modules/: index.html
docs/_modules/gunpowder/: array.html  array_spec.html  batch.html  batch_request.html  coordinate.html  graph.html  graph_spec.html  points.html  points_spec.html  provider_spec.html  roi.html  volume.html
docs/_sources/: api.rst.txt  arrays.rst.txt  batches.rst.txt  first_steps.rst.txt  index.rst.txt  install.rst.txt  nodes.rst.txt  points.rst.txt  requests_batches.rst.txt  tutorial.rst.txt  tutorial_batch_provider.rst.txt  tutorial_simple_pipeline.rst.txt  volumes.rst.txt
docs/_static/: custom.css  documentation_options.js
docs/_static/css/: badge_only.css.map  theme.css
docs/_static/js/: theme.js
docs/source/: api.rst  conf.py  index.rst  install.rst  tutorial_batch_provider.rst  tutorial_simple_pipeline.rst
examples/: cremi.py  fib25.py  full_pipeline.py  predict.py  segem.py  start.sh  test_luigi.py
examples/CX/: net.prototxt  predict_synapses.py  predict_synapses.sh  train_synapses.py  train_synapses.sh
examples/autocontext/: train.py  train.sh
examples/cremi/: .gitignore  README.md  mknet.py  net.prototxt  predict.py  predict.sh  request_batch.py  train.py  train.sh  train_dryrun.py
examples/fib25/: mknet.py  net.prototxt  process.py  process.sh  train.py  train.sh  view_snapshots.ipynb
examples/heartbeat/: mknet.py  mknet.sh  train.py
gunpowder/: __init__.py  add_gt_affinities.py  array.py  array_spec.py  batch.py  batch_filter.py  batch_filter_chain.py  batch_provider.py  batch_provider_tree.py  batch_request.py  batch_spec.py  build.py  chunk.py  compat.py  coordinate.py  crop_gt.py  defect_augment.py  dvid_source.py  elastic_augmentation.py  exclude_labels.py  freezable.py  graph.py  graph_spec.py  grow_boundary.py  hdf5_source.py  intensity_augment.py  morphology.py  ndarray.py  net_input_wrapper.py  net_io_wrapper.py  normalize.py  observers.py  padding.py  pipeline.py  points.py  points_spec.py  precache.py  print_profiling_stats.py  producer_pool.py  profiling.py  (+14 more)
gunpowder/caffe/: __init__.py  net_io_wrapper.py  predict.py  solver_parameters.py  train.py
gunpowder/caffe/nodes/: __init__.py  predict.py  train.py
gunpowder/contrib/: points.py
gunpowder/contrib/nodes/: __init__.py  add_blobs_from_points.py  add_boundary_distance_gradients.py  add_gt_mask_exclusive_zone.py  add_long_range_affinities.py  add_nonsymmetric_affinities.py  add_vector_map.py  dvid_partner_annotation_source.py  dvid_points_source.py  hdf5_points_source.py  prepare_malis.py  zero_out_const_sections.py
gunpowder/dvid/: __init__.py  dvid_source.py
gunpowder/ext/: __init__.py  zarr_file.py
gunpowder/jax/: __init__.py  generic_jax_model.py
gunpowder/jax/nodes/: __init__.py  predict.py  train.py
gunpowder/keras/nodes/: __init__.py  train.py
gunpowder/neuroglancer/: add_layer.py  event.py  scale_pyramid.py  visualize.py
gunpowder/nodes/: __init__.py  add_affinities.py  add_blobs_from_points.py  add_boundary_distance_gradients.py  add_gt_affinities.py  add_gt_binary_map_points.py  add_gt_mask_exclusive_zone.py  add_long_range_affinities.py  add_vector_map.py  array_source.py  astype.py  balance_affinity_labels.py  balance_labels.py  batch_filter.py  batch_provider.py  buffered_predict.py  chunk.py  crop.py  csv_points_source.py  daisy_graph_provider.py  daisy_request_blocks.py  defect_augment.py  deform_augment.py  downsample.py  dvid_source.py  elastic_augment.py  elastic_augmentation.py  exclude_labels.py  generic_predict.py  generic_train.py  gp_array_source.py  gp_graph_source.py  graph_source.py  grow_boundary.py  hdf5_source.py  hdf5_write.py  hdf5like_source_base.py  hdf5like_write_base.py  intensity_augment.py  intensity_scale_shift.py  (+35 more)
gunpowder/tensorflow/: __init__.py  local_server.py
gunpowder/tests/: test_suite.py
singularity/: Makefile  Singularity
src/gunpowder/: __init__.py  array.py  array_spec.py  batch.py  batch_request.py  coordinate.py  graph.py  graph_spec.py  pipeline.py  provider_spec.py  roi.py  version_info.py
tests/: .gitignore  Untitled.ipynb  __main__.py  checkpoint  conftest.py  producer_pool.py  run_luigi.sh  test_luigi.py  test_suite.py  tf_graph_checkpoint_100.data-00000-of-00001  tf_graph_checkpoint_100.index  tf_graph_checkpoint_200.data-00000-of-00001  tf_graph_checkpoint_200.index  tf_graph_checkpoint_300.data-00000-of-00001  tf_graph_checkpoint_300.index
tests/cases/: __init__.py  add_affinities.py  add_boundary_distance_gradients.py  add_gt_affinities.py  add_vector_map.py  array_source.py  astype.py  balance_affinity_labels.py  balance_labels.py  batch.py  batch_filter.py  chunk.py  crop.py  csv_points_source.py  deform_augment.py  downsample.py  dvid_source.py  elastic_augment.py  elastic_augment_points.py  expected_failures.py  gpgraph_source.py  graph.py  graph_keys.py  graph_points.py  graph_source.py  hdf5_source.py  hdf5_write.py  helper_sources.py  intensity_augment.py  intensity_scale_shift.py  iterate_locations.py  jax_train.py  jitter.py  keras_train.py  merge_provider.py  n5_write.py  node_dependencies.py  noise_augment.py  normalize.py  pad.py  (+28 more)
(+123 files in other folders)
