[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "gunpowder"
description = "A library to facilitate machine learning on large, multi-dimensional images."
authors = [
    { name = "Jan Funke", email = "funkej@hhmi.org" },
    { name = "William Patton", email = "pattonw@hhmi.org" },
    { name = "Renate Krause" },
    { name = "Julia Buhmann" },
    { name = "Rodrigo Ceballos Lentini" },
    { name = "William Grisaitis" },
    { name = "Chris Barnes" },
    { name = "Caroline Malin-Mayor" },
    { name = "Larissa Heinrich" },
    { name = "Philipp Hanslovsky" },
    { name = "Sherry Ding" },
    { name = "Andrew Champion" },
    { name = "Arlo Sheridan" },
    { name = "Constantin Pape" },
]
license = { text = "MIT" }
readme = "README.md"
dynamic = ["version"]

classifiers = ["Programming Language :: Python :: 3"]
keywords = []
requires-python = ">=3.12"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.6",
    "h5py>=3.10",
    "scikit-image",
    "requests",
    "augment-nd>=0.1.3",
    "tqdm",
    "funlib.geometry>=0.3",
    "zarr>=3",
    "networkx>=3.1",
    "funlib.persistence>=0.7",
    "iohub>=0.3",
]

[project.optional-dependencies]
pytorch = ['torch']
tensorflow = [
    # TF doesn't provide <2.0 wheels for py>=3.8 on pypi
    'tensorflow<2.0; python_version<"3.8"',    # https://stackoverflow.com/a/72493690
    'protobuf==3.20.*; python_version=="3.7"',
]
jax = [
    'jax',
    'jaxlib',
    # 'haiku',
    # 'optax',
]
full = [
    'torch',
    'tensorflow<2.0; python_version<"3.8"',
    'protobuf==3.20.*; python_version=="3.7"',
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "ty>=0.0.32",
    "types-requests>=2.32.4.20260107",
    "types-tqdm>=4.67.3.20260205",
]
docs = [
    "ipykernel>=6.31.0",
    "jupyter-sphinx>=0.5.3",
    "matplotlib>=3.9.4",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-togglebutton>=0.4.4",
    "tomli>=2.4.0",
    "torch>=2.8.0",
]


[tool.pytest.ini_options]
testpaths = ["tests/cases"]
python_files = "*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.setuptools.dynamic]
version = { attr = "gunpowder.version_info.__version__" }

[tool.ruff.lint]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]
ignore = [
    "E501",  # line length
    "E722",  # bare except
    "E741",  # ambiguous variable name
]
exclude = ["gunpowder/contrib/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
# ruff complains about escape sequence in docstring which renders math
"gunpowder/nodes/rasterize_graph.py" = ["W605"]
"docker/test_environment.py" = ["F401"]  # unused import in test env
